syntax = "proto3";

enum BugStatus {
  WAITING = 0;
  IN_PROGRESS = 1;
  CLOSED = 2;
}

enum Error {
  NONE = 0;
  AUTHENTICATION = 1;
}

message Bug {
  uint64 id = 1;
  string title = 2;
  string description = 3;
  BugStatus status = 4;

  repeated string tags = 5;
}

message GetBugsRequest {
  string token = 1;
  BugStatus status = 2;
}
message GetBugsResponse {
  Error error = 1;
  repeated Bug bugs = 2;
}

message GetBugRequest {
  string token = 1;
  Bug bug = 2;
}
message GetBugResponse {
  Error error = 1;
  bool found = 2;
  Bug bug = 3;
}

message UpdateBugRequest {
  string token = 1;
  Bug bug = 2;
}
message UpdateBugResponse { Error error = 1; }

message CreateBugRequest {
  string token = 1;
  Bug bug = 2;
}
message CreateBugResponse {
  Error error = 1;
  Bug bug = 2;
}

service BugService {
  rpc GetBugs(GetBugsRequest) returns (GetBugsResponse);
  rpc GetBug(GetBugRequest) returns (GetBugResponse);
  rpc CreateBug(CreateBugRequest) returns (CreateBugResponse);
  rpc UpdateBug(UpdateBugRequest) returns (UpdateBugResponse);
}
